--- a/navBar/navBar.html
+++ b/navBar/navBar.html
@@ -23,24 +23,24 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">KetchUp</a>
+          <a class="navbar-brand" href= <%=linkHome%> >KetchUp</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="/apt">Schedule a meeting</a></li>
+            <li class="active"><a href= <%=linkHome%> >Home <span class="sr-only">(current)</span></a></li>
+            <li><a href= <%=linkApt%> >Schedule a meeting</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/profile">Profile</a></li>
-                <li><a href="/pref">Preferences</a></li>
+                <li><a href= <%=linkProfile%> >Profile</a></li>
+                <li><a href= <%=linkPref%> >Preferences</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/logout" <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out</a></li>
+                <li><a href= <%=linkLogout%> <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out</a></li>
               </ul>
             </li>
           </ul>
