--- a/maps/maps.html
+++ b/maps/maps.html
@@ -23,6 +23,35 @@
       <div class='col-md-12'>
       </div>
     </div>
+
+
+    <!-- <form>
+      <input type='hidden' name='lat' id='lat'>
+      <input type='hidden' name='lng' id='lng'>
+    </form> -->
+
+
+    <form class="form-horizontal">
+
+      <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Meeting Location</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" name='mtgLocation' id="mtgLocation" placeholder="Location" rows="3">
+        </div>
+      </div>
+
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-default">Confirm Meeting Location</button>
+        </div>
+      </div>
+    </form>
+
+
+
+
+
   </div>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBV27rjUQoC_np17lGCrD4hmuIpA0ne4pg&callback=initMap&signed_in=true&libraries=places,visualization" async defer></script>
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
